--- a/starwarsintro.css
+++ b/starwarsintro.css
@@ -8,20 +8,18 @@ Version: 1.0
 */
 
 body, html{
-  background-image: url(/assets/stars.jpg);
   height: 100%;
   min-height: 100vh;
   margin: 0px;
 }
 
 .star-wars-intro {
-  background-image: url(/assets/stars.jpg);
+  background: url("img/stars-bg.jpg") center center;
   width: 100%;
   height: 100%;
   font-family: "Droid Sans", arial, verdana, sans-serif;
   font-weight: 700;
-  color: white;
-  ;
+  color: #EBD71C;
   background-color: #000;
   overflow: hidden;
   position: relative;
@@ -33,7 +31,7 @@ body, html{
   font-size: 200%;
   font-weight: 400;
   margin: 20% auto;
-  color: rgb(68, 212, 238);
+  color: #4ee;
   opacity: 0;
   z-index: 1;
   text-align: center;
@@ -109,8 +107,8 @@ body, html{
   position: absolute;
   width: 2.6em;
   left: 50%;
-  top: -20vh;
-  font-size: 30em;
+  top: 20vh;
+  font-size: 10em;
   text-align: center;
   margin-left: -1.3em;
   line-height: 0.8em;
@@ -126,11 +124,9 @@ body, html{
   animation: logo 5s ease-out 2.5s;
 }
 
-
 .star-wars-intro .main-logo > img {
   max-width: 100%;
 }
-
 
 @-webkit-keyframes intro {
   0% { opacity: 1; }
