--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html{
 }
 
 .star-wars-intro {
-  background: url("stars.jpg") center center;
+  background: url("img/stars.jpg") center center;
   width: 100%;
   height: 100%;
   font-family: "Droid Sans", arial, verdana, sans-serif;
