--- a/starwarsintro.css
+++ b/starwarsintro.css
@@ -103,7 +103,7 @@ body, html{
   left: 50%;
   top: 20vh;
   font-size: 10em;
-  text-align: left;
+  text-align: center;
   margin-left: -1.3em;
   line-height: 0.8em;
   letter-spacing: -0.05em;
