--- a/starwarsintro.css
+++ b/starwarsintro.css
@@ -18,6 +18,18 @@ html {
     position: relative;
 }
 
+.star-wars-intro:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    content: '';
+    width: 100%;
+    height: 5px;
+    background-color: #000;
+    box-shadow: 0px 0px 21px 19px black;
+}
+
 .star-wars-intro p.intro-text {
     position: relative;
     max-width: 16em;
